<resources>
    <string name="app_name">My Tiny NASA</string>
    <string name="app_infos">Version 1.0 - EPITA - MTI 2022</string>

    <string name="title_home">Home</string>
    <string name="title_apod">APOD</string>
    <string name="title_apod_complet">Astronomy Picture Of the Day </string>
    <string name="title_mars_rover">Mars Photos</string>
    <string name="title_eonet">EONET</string>

    <string name="author_antoine">antoine.du-fou</string>
    <string name="author_louis">louis.santucci</string>
    <string name="author_leo">leo.tavernier</string>
    <string name="author_thomas">thomas.tourrette</string>

    <string name="eonet_button_filter">FILTER</string>

    <string name="eonet_item_description_title">Description :</string>
    <string name="eonet_item_type_title">Type :</string>
    <string name="eonet_item_date_title">Date :</string>
    <string name="eonet_item_magnitude_title">Magnitude :</string>

    <string name="eonet_filter_limit_title">Results</string>
    <string name="eonet_filter_limit_hint">25</string>

    <string name="eonet_filter_days_title">In the last</string>
    <string name="eonet_filter_days_title_end">days</string>
    <string name="eonet_filter_days_hint">7</string>

    <string name="eonet_filter_reset">RESET</string>
    <string name="eonet_filter_apply">APPLY</string>

    <string name="this_list_is_empty">This list is empty</string>

    <string name="mars_rover_rover_selection_button">Rover Selection</string>
    <string name="mars_rover_camera_selection_button">Camera Selection</string>

    <string name="mars_rover_image_description">Contains the image of the object thanks to the API call</string>
    <string name="mars_rover_choice_description">Please select a rover type.</string>
    <string name="mars_rover_camera_choice_description">Please select a camera type.</string>

    <string name="mars_rover_type_curiosity">Curiosity</string>
    <string name="mars_rover_type_opportunity">Opportunity</string>
    <string name="mars_rover_type_spirit">Spirit</string>

    <string name="mars_rover_camera_FHAZ">FHAZ</string>
    <string name="mars_rover_camera_RHAZ">RHAZ</string>
    <string name="mars_rover_camera_MAST">MAST</string>
    <string name="mars_rover_camera_CHEMCAM">CHEMCAM</string>
    <string name="mars_rover_camera_MAHLI">MAHLI</string>
    <string name="mars_rover_camera_MARDI">MARDI</string>
    <string name="mars_rover_camera_NAVCAM">NAVCAM</string>
    <string name="mars_rover_camera_PANCAM">PANCAM</string>
    <string name="mars_rover_camera_MINITES">MINITES</string>
    <string name="mars_rover_camera_ALL">All</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rover">Rover</string>
    <string name="camera">Camera</string>
    <string name="date">Date</string>


    <string-array name="Curiosity">
        <item>FHAZ,Front Hazard Avoidance Camera</item>
        <item>RHAZ,Rear Hazard Avoidance Camera</item>
        <item>MAST,Mast Camera</item>
        <item>CHEMCAM,Chemistry and Camera Complex</item>
        <item>MAHLI,Mars Hand Lens Imager</item>
        <item>MARDI,Mars Descent Imager</item>
        <item>NAVCAM,Navigation Camera</item>
    </string-array>
    <string-array name="Opportunity">
        <item>FHAZ,Front Hazard Avoidance Camera</item>
        <item>RHAZ,Rear Hazard Avoidance Camera</item>
        <item>NAVCAM,Navigation Camera</item>
        <item>PANCAM,Panoramic Camera</item>
        <item>MINITES,Miniature Thermal Emission Spectrometer (Mini-TES)</item>
    </string-array>
    <string-array name="Spirit">
        <item>FHAZ,Front Hazard Avoidance Camera</item>
        <item>RHAZ,Rear Hazard Avoidance Camera</item>
        <item>NAVCAM,Navigation Camera</item>
        <item>PANCAM,Panoramic Camera</item>
        <item>MINITES,Miniature Thermal Emission Spectrometer (Mini-TES)</item>
    </string-array>
</resources>