<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/rover_curiosity_cam_FHAZ"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:text="@string/mars_rover_camera_FHAZ"
        android:textAllCaps="true"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/rover_curiosity_cam_MAHLI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/rover_curiosity_cam_RHAZ"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:text="@string/mars_rover_camera_RHAZ"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/rover_curiosity_cam_FHAZ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/rover_curiosity_cam_MAST"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:text="@string/mars_rover_camera_MAST"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/rover_curiosity_cam_RHAZ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/rover_curiosity_cam_MAHLI"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:text="@string/mars_rover_camera_MAHLI"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/rover_curiosity_cam_NAVCAM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/rover_curiosity_cam_NAVCAM"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:text="@string/mars_rover_camera_NAVCAM"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/rover_curiosity_cam_MARDI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/rover_curiosity_cam_ALL"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:layout_marginBottom="20dp"
        android:text="@string/mars_rover_camera_ALL"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/rover_curiosity_cam_CHEMCAM"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:text="@string/mars_rover_camera_CHEMCAM"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/rover_curiosity_cam_ALL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/rover_curiosity_cam_MARDI"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:text="@string/mars_rover_camera_MARDI"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/rover_curiosity_cam_CHEMCAM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/mars_rover_choice_description"
        android:text="@string/mars_rover_camera_choice_description"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/rover_curiosity_cam_MAST"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>