<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mytinynasa.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/marsRoverFragment"
        android:name="com.example.mytinynasa.mars_rover.ui.MarsRoverFragment"
        android:label="@string/title_mars_rover"
        tools:layout="@layout/fragment_mars_rover" />
    <fragment
        android:id="@+id/eonetFragment"
        android:name="com.example.mytinynasa.eonet.ui.EonetFragment"
        android:label="@string/title_eonet"
        tools:layout="@layout/eonet_fragment" />

</navigation>