<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/mars_rover_rover_selection"
    tools:context=".mars_rover.ui.MarsRoverFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<Button
        android:id="@+id/rover_curiosity_cam_FHAZ"
        android:layout_width="360dp"
        android:layout_height="125dp"
        android:layout_marginTop="50dp"
        android:text="@string/mars_rover_type_spirit"
        android:textAllCaps="true"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rover_curiosity_cam_RHAZ"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/rover_curiosity_cam_RHAZ"
        android:layout_width="360dp"
        android:layout_height="125dp"
        android:text="@string/mars_rover_type_opportunity"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rover_curiosity_cam_MAST"
        android:layout_width="360dp"
        android:layout_height="125dp"
        android:layout_marginBottom="50dp"
        android:text="@string/mars_rover_type_curiosity"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/rover_curiosity_cam_RHAZ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/mars_rover_choice_description"
        android:text="@string/mars_rover_choice_description"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/rover_curiosity_cam_MAST"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>